Added beef-kebab.html and korean-fried-chicken.html

--- a/index.html
+++ b/index.html
@@ -9,4 +9,8 @@
         <h1>Odin Recipes</h1>
 
         <a href="recipes/chicken-curry.html">Filipino Chicken Curry</a>
+        <br>
+        <a href="recipes/beef-kebab.html">Beef Kebab</a>
+        <br>
+        <a href="recipes/korean-fried-chicken.html">Korean Fried Chicken</a>
 </html>
