Edited README.md Addded recipes & link

--- a/recipes/chicken-curry.html
+++ b/recipes/chicken-curry.html
@@ -6,7 +6,6 @@
 
     </head>
     <body> 
-        <h1>Odin Recipes</h1>
-
-        <a href="recipes/chicken-curry.html">Filipino Chicken Curry</a>
+        <h1>Filipino Chicken Curry</h1>
+    </body>
 </html>
